# 13f-scraper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
scripts/: deploy_sandbox.sh  monitor_sandbox.sh
src/salp_13f_monitor/: cli.py
tests/: test_diff.py
